--- a/client/layouts/HomeLayout.html
+++ b/client/layouts/HomeLayout.html
@@ -1,5 +1,8 @@
 <template name="HomeLayout">
 	{{> _Header }}
-	{{> Template.dynamic template=main }}
+	<div class="container">
+		{{> Template.dynamic template=main }}
+	</div>
+	
 	{{> _Footer }}
 </template>
