Add load more posts.

--- a/client/templates/posts/Posts.html
+++ b/client/templates/posts/Posts.html
@@ -7,6 +7,7 @@
 				<a href="/posts/{{slug}}">{{title}}</a>
 			</li>
 		{{/each}}
+		<button id='loadMore' type="button" class="btn btn-default">Load more</button>
 	{{else}}
 		{{> spinner}}
 	{{/if}}
