Add Post design, about route

--- a/client/partials/_Footer.html
+++ b/client/partials/_Footer.html
@@ -1,3 +1,10 @@
 <template name="_Footer">
-	Footer
+	<footer>
+	    <div class="row">
+	        <div class="col-lg-12">
+	            <p>Copyright &copy; Lorem ipsum Deserunt dolore exercitation ullamco.</p>
+	        </div>
+	    </div>
+	    <!-- /.row -->
+	</footer>
 </template>
