--- a/client/templates/posts/Posts.html
+++ b/client/templates/posts/Posts.html
@@ -1,15 +1,20 @@
 <template name="Posts">
-	<h1>Post List</h1>
-	<ul>
+	<h1 class="page-header">Post List</h1>
 	{{#if Template.subscriptionsReady}}
 		{{#each posts}}
-			<li>
+			<h2>
 				<a href="/posts/{{slug}}">{{title}}</a>
-			</li>
+			</h2>
+			<p>
+				<span class="glyphicon glyphicon-time"></span> Posted on {{createdAt}}
+			</p>
+			<p class="lead">
+				{{summary}}
+			</p>
+			<a class="btn btn-primary" href="/posts/{{slug}}">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+			<hr>
 		{{/each}}
-		<button id='loadMore' type="button" class="btn btn-default">Load more</button>
 	{{else}}
 		{{> spinner}}
 	{{/if}}
-	</ul>
 </template>
