--- a/client/templates/posts/SinglePostView.html
+++ b/client/templates/posts/SinglePostView.html
@@ -3,9 +3,19 @@
 		<!-- Post Information -->
 		<h1>{{post.title}}</h1>
 		<hr>
-		<p>
-			<span class="glyphicon glyphicon-time"></span> Posted on {{post.createdAt}}
-		</p>
+        <div class="clearfix">
+            <span class="glyphicon glyphicon-time"></span> Posted on {{post.createdAt}} &nbsp;
+            {{#if isOwner}}
+            <div class="btn-group pull-right">
+                <a href="/posts/{{post._id}}/edit" class="btn btn-success">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </a>
+                <button id="deletePostButton" type="button" class="btn btn-danger">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                </button>
+            </div>
+            {{/if}}
+        </div>
 		<hr>
 		<!-- Post Content -->
 		<p class="lead">
